--- a/_config.yml
+++ b/_config.yml
@@ -48,13 +48,13 @@ navbar-links:
 
 # Personalize the colors in your website. Colour values can be any valid CSS colour
 
-navbar-col: "#660033"
+navbar-col: "#8bebe6"
 navbar-text-col: "#777777"
-navbar-children-col: "#660033"
+navbar-children-col: "#8bebe6"
 page-col: "#FFFFFF"
 link-col: "#ff1a8c"
 hover-col: "#0085A1"
-footer-col: "#660033"
+footer-col: "#8bebe6"
 footer-text-col: "#777777"
 footer-link-col: "#595959"
 
