--- a/_config.yml
+++ b/_config.yml
@@ -30,11 +30,10 @@ navbar-links:
   Project Experience: "research"
   Teaching: "teaching"
   Resume: "resume.pdf"
-  #Resources:
-  #  - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
-  #  - Learn markdown: "http://www.markdowntutorial.com/"
-  #  - GitHub Pages: "https://pages.github.com/"
-  #Author's home: "http://deanattali.com"
+  Slide Decks:
+    - RStudioConf 2020: "rstudioconf2020"
+    - RLadiesMeetup 2018: "MeetUpSlides"
+    - TidyverseShower 2018: "TidyverseShower"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
